syntax = "proto3";

package customer;

option go_package = "proto/";

service CustomerService {
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
}

message GetCustomerRequest {
    string id = 1;
}

message GetCustomerResponse {
    Customer customer = 1;
}

message ListCustomersRequest {}

message ListCustomersResponse {
    repeated Customer customers = 1;
}

message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
    string street = 4;
    string city = 5;
    string country = 6;
}

message CreateCustomerRequest {
    string name = 1;
    string email = 2;
    string street = 3;
    string city = 4;
    string country = 5;
}

message CreateCustomerResponse {}

message UpdateCustomerRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string street = 4;
    string city = 5;
    string country = 6;
}

message UpdateCustomerResponse {}

message DeleteCustomerRequest {
  string id = 1;
}

message DeleteCustomerResponse {}